# InstrumentUI

./: Cargo.toml  build.rs
cpp/: graph_object_helpers.cpp  graph_object_helpers.h
examples/: DPIB_scan.rs  LXI_scan.rs  RS485_scan.rs  USB_scan.rs  aggregator_list.rs  awg_demo.rs  basic_demo.rs  broadcast.rs  decode_i2c.rs  decode_uart_demo.rs  dmm_dcv.rs  fft_math_measure.rs  logic_analyzer.rs  mask_passfail.rs  measure_demo.rs  psu_channel_on.rs  record_replay.rs  sine_1khz.rs  sine_300khz.rs  trigger_demo.rs
qml/: FunctionGeneratorUI.qml  GraphViewWindow.qml  OscilloscopeUI.qml  awg.qml  function_generator.qml  hub.qml  main.qml  oscilloscope.qml  qml.qrc
src/: aggregator.rs  awg_controller.rs  awg_object.rs  bridge.rs  cli.rs  cxxqt_object.rs  function_generator_backend.rs  function_generator_ui.rs  graph_object.rs  gui.rs  gui_bridge.rs  heatmap_object.rs  instrument.rs  instrument_manager.rs  io.rs  lib.rs  lxi.rs  main.rs  osc_controller.rs  oscillo_data_provider.rs  oscillo_object.rs  oscilloscope_backend.rs  oscilloscope_ui.rs  oscollo_data_provider.rs  prelude.rs  repl.rs  utils.rs
src/commands/: acquire.rs  awg.rs  basic.rs  decode.rs  display.rs  dmm.rs  logic.rs  mask.rs  math.rs  measure.rs  misc.rs  mod.rs  network.rs  psu.rs  trigger.rs
tests/: aggregator.rs  utils_parse_source_arg.rs
