[package]
name = "Instrument_UI"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }    # Tokio runtime for async
tokio-lxi = "0.2.2"                          # LXI communication crate


[lib]
name = "rigol_cli"        # ez lesz a krate‑név, amire a main hivatkozik
path = "src/lib.rs"