[package]
name = "Instrument_UI"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }    # Tokio runtime for async
tokio-lxi = "0.2.2"
serde_json = "1.0.140"                          # LXI communication crate
if-addrs = "0.14.0"
rusb = "0.9.4"
serialport = "4.7.2"
cxx = "1.0.161"
cxx-qt         = "0.7.2"
cxx-qt-lib = { version = "0.7.2", features = ["qt_full"] }
once_cell = "1.21.3"
base64 = "0.22.1"
image = "0.25.6"




[build-dependencies]
cxx-qt-build = { version = "0.7.2", features = ["link_qt_object_files"] }


[lib]
name = "rigol_cli"        # ez lesz a krate‑név, amire a main hivatkozik
path = "src/lib.rs"
